# lora

./: .env.example  .gitignore  README.md  lora.yaml.example  pyproject.toml
apps/desktop/: index.html  package-lock.json  package.json
contracts/events/: chat-events.schema.json
contracts/openapi/: lora-api.json
doc/: lora-chat.md
doc_design/: agent-self-optimization-module-breakdown.md  agent-self-optimization-session-case-design.md  development-guide.md  file-effect-tracking-development-plan.md  pygent-tool-path-compatibility-requirements.md  pygent-tool-structured-error-requirements.md
doc_design/agent_design/: agent-context-architecture-zh.md  agent-context-management-system-design.md  prompt-composition-architecture-design.md  prompt-injection-map.md
doc_design/unimplemented/: 01-agent-profile-management.md  02-regression-runner.md  03-repair-workflow.md  04-failure-analyzer.md  05-test-generation-and-regression-registration.md  06-workspace-setup-extensions.md  07-workspace-path-safety.md
docs/: README.md
docs/api/: README.md  local-service.md
docs/architecture/: repository-layout.md
docs/cli/: lora-chat.md
docs/guides/: api-key-management.md  development-guide.md
docs/product/: README.md  message-display-guidelines.md
examples/: prompt_module_customization.py  react_agent_demo.py
legacy/pyside_gui/: README.md
scripts/dev/: README.md
scripts/package/: README.md  build-desktop.ps1  build-python-api.ps1  lora_entry.py
src/gui/: __init__.py  __main__.py  app.py  devtools.py  main_window.py  session_model.py  theme.py  workers.py
src/lora/: __init__.py  agent.py  analysis.py  case.py  cli.py  config.py  credentials_cli.py  diffing.py  repair.py  (+9 more)
(+189 files in other folders)
