[project]
name = "lora"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pygent-ai==0.1.11",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[project.scripts]
lora = "lora.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lora"]
