[project]
name = "lora"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "PySide6>=6.8.0",
    "pygent-ai==0.1.13",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
credentials = [
    "keyring>=25.0.0",
]

[project.scripts]
lora = "lora.cli:main"
lora-gui = "gui.__main__:main"
lora-resources = "gui.resources_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lora", "src/gui"]
