[project]
name = "lora"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "pygent-ai==0.1.14",
    "uvicorn>=0.32.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
credentials = [
    "keyring>=25.0.0",
]
legacy-gui = [
    "PySide6>=6.8.0",
]

[project.scripts]
lora = "lora.cli:main"
lora-api = "lora_api.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lora", "src/lora_api", "src/gui"]
